# rtsp2web-rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  cert.pem  config.json  key.pem
.github/: dependabot.yml
.github/workflows/: cross.yaml  docker.yaml
src/: appcontext.rs  main.rs  rtspclient.rs  streamdef.rs  websocketservice.rs  webtransportservice.rs  wsservice.rs
