[package]
name = "rtsp2web-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michel Promonet <michel.promonet@free.fr>"]
license = "The Unlicense"
keywords = ["webrtc", "whep", "rtsp"]

[dependencies]
retina = "*"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.39", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
url = "2.5"
env_logger = "0.11"
actix-web = "4.7"
actix-files = "0.6"
actix-web-actors = "4.3"
serde_json = "1.0"
actix = "0.13.5"
