[package]
name = "rtsp2web-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michel Promonet <michel.promonet@free.fr>"]
license = "The Unlicense"
keywords = ["webrtc", "whep", "rtsp"]

[dependencies]
retina = "*"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
rustls = "*"
rustls-pemfile = "2.2"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
url = "2.5"
env_logger = "0.11"
actix-web = { version = "4.9", features = ["rustls"] }
actix-files = "0.6"
actix-web-actors = "4.3"
serde_json = "1.0"
actix = "0.13"
